Name:                datasets
Version:             0.1.0.1
Synopsis:            Classical data sets for statistics and machine learning
Description:         Classical machine learning and statistics datasets from
                     the UCI Machine Learning Repository and other sources.
                     .
                     > import Numeric.Datasets (getDataset)
                     > import Numeric.Datasets.Iris (iris)
                     >
                     > main = do
                     >   irises <- getDataset iris
                     >   print (length irises)
                     >   print (head irises)

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen <tanielsen@gmail.com>
Maintainer:          Tom Nielsen <tanielsen@gmail.com>
build-type:          Simple
Cabal-Version: 	     >= 1.8
homepage:            https://github.com/glutamate/datasets
bug-reports:         https://github.com/glutamate/datasets/issues
category:            Statistics, Machine Learning, Data Mining, Data

Data-files:
        datafiles/iris.data

source-repository head
  type:     git
  location: https://github.com/glutamate/datasets


Library
   ghc-options:       -Wall
   hs-source-dirs:    src

   Exposed-modules:
                   Numeric.Datasets
                 , Numeric.Datasets.Anscombe
                 , Numeric.Datasets.OldFaithful
                 , Numeric.Datasets.Abalone
                 , Numeric.Datasets.Adult
                 , Numeric.Datasets.BreastCancerWisconsin
                 , Numeric.Datasets.Car
                 , Numeric.Datasets.Iris
                 , Numeric.Datasets.Wine
   other-modules: Paths_datasets

   Build-depends:
                 base                    >= 4.6 && < 5
               , cassava
               , HTTP
               , hashable
               , filepath
               , bytestring
               , directory
               , vector
               , text
               , stringsearch
