Name:                datasets
Version:             0.2.0.1
Synopsis:            Classical data sets for statistics and machine learning
Description:         Classical machine learning and statistics datasets from
                     the UCI Machine Learning Repository and other sources.
                     .
                     The datasets package defines two different kinds of datasets:
                     .
                     * small data sets which are directly (or indirectly with `file-embed`)
                       embedded in the package as pure values and do not require network or IO to download
                       the data set. This includes Iris, Anscombe and OldFaithful.
                     .
                     * other data sets which need to be fetched over the network with
                       `Numeric.Datasets.getDataset` and are cached in a local temporary directory.
                     .
                     > import Numeric.Datasets (getDataset)
                     > import Numeric.Datasets.Iris (iris)
                     > import Numeric.Datasets.Abalone (abalone)
                     >
                     > main = do
                     >   -- The Iris data set is embedded
                     >   print (length iris)
                     >   print (head iris)
                     >   -- The Abalone dataset is fetched
                     >   abas <- getDataset abalone
                     >   print (length abas)
                     >   print (head abas)

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen <tanielsen@gmail.com>
Maintainer:          Tom Nielsen <tanielsen@gmail.com>
build-type:          Simple
Cabal-Version: 	     >= 1.8
homepage:            https://github.com/glutamate/datasets
bug-reports:         https://github.com/glutamate/datasets/issues
category:            Statistics, Machine Learning, Data Mining, Data
extra-source-files:
                   changelog.md
                   datafiles/iris.data
                   datafiles/michelson.json
                   datafiles/nightingale.json

source-repository head
  type:     git
  location: https://github.com/glutamate/datasets


Library
   ghc-options:       -Wall
   hs-source-dirs:    src

   Exposed-modules:
                   Numeric.Datasets
                 , Numeric.Datasets.Anscombe
                 , Numeric.Datasets.BostonHousing
                 , Numeric.Datasets.OldFaithful
                 , Numeric.Datasets.Abalone
                 , Numeric.Datasets.Adult
                 , Numeric.Datasets.BreastCancerWisconsin
                 , Numeric.Datasets.Car
                 , Numeric.Datasets.Iris
                 , Numeric.Datasets.Michelson
                 , Numeric.Datasets.Nightingale
                 , Numeric.Datasets.Wine
   Build-depends:
                 base                    >= 4.6 && < 5
               , cassava
               , HTTP
               , hashable
               , filepath
               , bytestring
               , directory
               , vector
               , text
               , stringsearch
               , file-embed
               , aeson
               , time