Name:                plotlyhs
Version:             0.1.0
Synopsis:            Haskell bindings to Plotlyy.js
Description:
        Generate web-based plots


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8

Library
   ghc-options:       -O2 -Wall
   ghc-prof-options:  -auto-all
   hs-source-dirs:    src

   Exposed-modules:
                   Graphics.Plotly

   Build-depends:
                 base                    >= 4.6
               , aeson
