Name:                plotlyhs
Version:             0.1.0
Synopsis:            Haskell bindings to Plotly.js
Description:
        Generate web-based plots


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8

Library
   ghc-options:       -Wall
   ghc-prof-options:  -auto-all
   hs-source-dirs:    src

   Exposed-modules:
                   Graphics.Plotly
                 , Graphics.Plotly.Utils
                 , Graphics.Plotly.Lucid
                 , Graphics.Plotly.Histogram

   Build-depends:
                 base                    >= 4.6
               , aeson
               , lucid
               , text
               , bytestring
               , microlens-th
               , microlens

executable test-plotly
  main-is: TestPlotly.hs
  build-depends:       base >=4.6 && <5
                     , plotlyhs
                     , lucid
                     , aeson
                     , text
                     , microlens
