Name:                plotlyhs
Version:             0.1.0
Synopsis:            Haskell bindings to Plotly.js
Description:
            Generate web-based plots with the Plotly.js library.
            For examples, see <https://glutamate.github.io/plotlyhs/>


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8
homepage:            https://github.com/glutamate/plotlyhs
bug-reports:         https://github.com/glutamate/plotlyhs/issues
category:            Graphics, Charts
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults
   ghc-prof-options:  -auto-all
   hs-source-dirs:    src

   Exposed-modules:
                   Graphics.Plotly
                 , Graphics.Plotly.Utils
                 , Graphics.Plotly.Lucid
                 , Graphics.Plotly.Blaze
                 , Graphics.Plotly.Histogram

   Build-depends:
                 base                    >= 4.7
               , aeson
               , lucid
               , blaze-html
               , blaze-markup
               , text
               , bytestring
               , microlens-th
               , microlens

executable test-plotly
  main-is: TestPlotly.hs
  build-depends:       base >=4.6 && <5
                     , plotlyhs
                     , lucid
                     , aeson
                     , text
                     , microlens
