Name:                uci-datasets
Version:             0.1.0
Synopsis:            Datasets from the UCI Machine Learning Repository
Description:
            Classical machine learning and statistics datasets from
            the UCI Machine Learning Repository

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8

Library
   ghc-options:       -O2 -Wall
   ghc-prof-options:  -auto-all
   hs-source-dirs:    src

   Exposed-modules:
                   Numeric.Dataset.UCI
                 , Numeric.Dataset.Iris
                 , Numeric.Dataset.Anscombe
                 , Numeric.Dataset.OldFaithful
                 , Numeric.Dataset.Adult

   Build-depends:
                 base                    >= 4.6
               , cassava
               , HTTP
               , hashable
               , filepath
               , bytestring
               , directory
               , vector
               , text
