Name:                dampf
Version:             0.1.0
Synopsis:            Declarative DevOps for busy developers
Description:
                     Declarative DevOps for busy developers

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8
homepage:            https://github.com/diffusionkinetics/open/dampf
bug-reports:         https://github.com/diffusionkinetics/open/issues
category:            Control, Statistics
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    lib

   Exposed-modules:
                   Dampf
                   Dampf.AppFile
                   Dampf.ConfigFile
                   Dampf.ConfigFile.Env
                   Dampf.Common
                   Dampf.Docker
                   Dampf.Docker.Free
                   Dampf.Docker.Types
                   Dampf.Nginx
                   Dampf.Nginx.Config
                   Dampf.Postgres.Migrate
                   Dampf.Postgres.Connect
                   Dampf.Postgres.Setup
                   Dampf.Postgres


   Build-depends:
                 base                    >= 4.7
               , yaml
               , aeson
               , unordered-containers
               , text
               , time
               , directory
               , filepath
               , process
               , postgresql-simple
               , pretty
               , containers
               , unix
               , typed-process
               , free
               , vector
               , lens

executable dampf
  main-is: Main.hs
  build-depends:       base >=4.6 && <5
                     , optparse-generic
                     , dampf
