name:               dampf
version:            0.1.0
synopsis:           Declarative DevOps for busy developers
description:        Declarative DevOps for busy developers
author:             Tom Nielsen
maintainer:         tanielsen@gmail.com
homepage:           https://github.com/diffusionkinetics/open/dampf
bug-reports:        https://github.com/diffusionkinetics/open/issues
license:            MIT
license-file:       LICENSE

build-type:         Simple
category:           Control, Statistics
cabal-version: 	    >= 1.8
tested-with:        GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1

extra-source-files: changelog.md


library
    hs-source-dirs: lib

    exposed-modules:
        Dampf
      , Dampf.Docker
      , Dampf.Docker.Free
      , Dampf.Docker.Types
      , Dampf.Monitor
      , Dampf.Nginx
      , Dampf.Nginx.Config
      , Dampf.Nginx.Types
      , Dampf.Postgres
      , Dampf.Postgres.Migrate
      , Dampf.Postgres.Connect
      , Dampf.Postgres.Setup
      , Dampf.Types
      , Dampf.AppFile.Pretty
      , Dampf.AppFile.Types
      , Dampf.ConfigFile.Pretty
      , Dampf.ConfigFile.Types
      , Dampf.Docker.Args
      , Dampf.Docker.Args.Class
      , Dampf.Docker.Args.Run
      , Dampf.Provision

    other-modules:
        Dampf.Internal.Env
      , Dampf.Internal.Yaml

    ghc-options:
        -Wall
        -fwarn-incomplete-patterns
        -fwarn-missing-signatures
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-warnings-deprecations

    build-depends:
        base >= 4.7 && < 5
      , wreq
      , aeson
      , containers
      , directory
      , exceptions
      , filepath
      , free
      , lens
      , mtl
      , postgresql-simple
      , pretty
      , process
      , text
      , time
      , typed-process
      , unix
      , unordered-containers
      , vector
      , yaml
      , regex-base
      , regex-posix
      , bytestring
      , shelly

executable dampf
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5
      , dampf
      , lens
      , optparse-applicative
      , optparse-generic
      , text

