Name:                dashdo-examples
Version:             0.1.0
Synopsis:            Shiny for Haskell
Description:
        Web-based interactive applets for data analysis


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
category:            Statistics, Web
Cabal-Version: 	     >= 1.10


executable test-dashdo
  main-is: TestDashdo.hs
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:       base >=4.6 && <5
                     , plotlyhs
                     , datasets
                     , lucid
                     , aeson
                     , text
                     , dashdo
                     , microlens-platform

executable iris-kmeans-dashdo
  main-is: IrisKMeans.hs
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:       base >=4.6 && <5
                     , plotlyhs
                     , datasets
                     , lucid
                     , aeson
                     , text
                     , dashdo
                     , microlens-platform
                     , fuml
                     , vector
                     , mtl
                     , lucid-extras

executable statview-dashdo
  main-is: StatView.hs
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:       base >=4.6 && <5
                     , plotlyhs
                     , datasets
                     , lucid
                     , aeson
                     , text
                     , dashdo
                     , microlens-platform
                     , statgrab
                     , lucid-extras
                     , unix
