Name:                dashdo-examples
Version:             0.1.0
Synopsis:            Shiny for Haskell
Description:
        Web-based interactive applets for data analysis


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
category:            Statistics, Web
Cabal-Version: 	     >= 1.10

library
  hs-source-dirs:   lib
  exposed-modules:
    Dashdo.Examples.GapminderScatterplot
    Dashdo.Examples.IrisKMeans
    Dashdo.Examples.StatView
    Dashdo.Examples.TestDashdo
  build-depends:
      base >= 4 && <= 5
    , plotlyhs
    , datasets
    , lucid
    , lucid-extras
    , aeson
    , text
    , dashdo
    , microlens-platform
    , fuml
    , vector
    , mtl
    , statgrab
    , unix

executable test-dashdo
  main-is: TestDashdo.hs
  default-language:  Haskell2010
  hs-source-dirs:    exe
  build-depends:       base >=4.6 && <5
                     , dashdo-examples

executable iris-kmeans-dashdo
  main-is: IrisKMeans.hs
  default-language:  Haskell2010
  hs-source-dirs:    exe
  build-depends:       base >=4.6 && <5
                     , dashdo-examples

executable statview-dashdo
  main-is: StatView.hs
  default-language:  Haskell2010
  hs-source-dirs:    exe
  build-depends:       base >=4.6 && <5
                     , dashdo-examples

executable gapminder-dashdo
  main-is: GapminderScatterplot.hs
  default-language:  Haskell2010
  hs-source-dirs:    exe
  build-depends:       base >=4.6 && <5
                     , dashdo-examples