name:                fuml-hnn
version:             0.1.0.0
synopsis:            Feed forward neural networks using fuml
description:         Feed forward neural networks using fuml
homepage:            https://github.com/diffusionkinetics/open/tree/master/fuml-svm
license:             MIT
license-file:        LICENSE
author:              Tom Nielsen
maintainer:          tomn@diffusionkinetics.com
copyright:           Tom Nielsen
category:            Statistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/diffusionkinetics/open

library
  hs-source-dirs:    lib
  ghc-options:       -fwarn-unused-imports -fno-warn-unused-do-bind -fno-warn-type-defaults
  default-language:  Haskell2010
  exposed-modules:   Fuml.HNN
  build-depends:       base >= 4.6 && < 5
                     , hnn
                     , fuml
                     , vector
                     , hmatrix
                     , random-fu
                     , data-default
                     , kmeans-vector
                     , microlens
                     , mtl
                     , random-fu
                     , containers

Test-Suite test-hnn
  type:       exitcode-stdio-1.0
  main-is: TestHNN.hs
  default-language:  Haskell2010
  build-depends:       base >=4.6 && <5
                     , fuml
                     , datasets
                     , vector
                     , mtl
                     , random-fu
                     , hnn
                     , hmatrix
                     , fuml-hnn
