Name:                inliterate
Version:             0.1.0
Synopsis:            Interactive literate programming
Description:
        Evaluate markdown code blocks


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8
homepage:            https://github.com/filopodia/open/inliterate
bug-reports:         https://github.com/filopodia/open/issues
category:            Statistics
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    lib

   Exposed-modules:
                   Inliterate
                 , Inliterate.Class

   Build-depends:
                 base                    >= 4.7
               , text
               , containers
               , cheapskate
               , blaze-html


Test-suite test-inliterate
  type:       exitcode-stdio-1.0
  main-is: TestInliterate.hs
  build-depends:       base >=4.6 && <5
                     , inliterate
                     , text