Name:                inliterate
Version:             0.1.0
Synopsis:            Interactive literate programming
Description:
        Evaluate markdown code blocks to show the results of running the code.


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tomn@diffusionkinetics.com
build-type:          Simple
Cabal-Version: 	     >= 1.8
homepage:            https://github.com/diffusionkinetics/open/inliterate
bug-reports:         https://github.com/diffusionkinetics/open/issues
category:            Statistics
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md
                   README.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    lib

   Exposed-modules:
                   Inliterate
                 , Inliterate.Import
                 , Inliterate.Inspect

   Build-depends:
                 base                    >= 4.6 && <5
               , text
               , containers
               , cheapskate
               , blaze-html
               , time
               , plotlyhs
               , lucid
               , lucid-extras
               , haskell-src-exts


Executable inlitpp
  main-is: InlitPreProc.hs
  build-depends:       base >=4.6 && <5
                     , inliterate
                     , text

Test-suite test-inliterate
  type:       exitcode-stdio-1.0
  main-is: TestInliterate.hs
  build-depends:       base >=4.6 && <5
                     , inliterate
                     , text

Test-suite test-inliterate-pp
  type:       exitcode-stdio-1.0
  buildable: False
  main-is: TestInliteratePreProc.hs
  build-depends:       base >=4.6 && <5
                     , inliterate
                     , text
                     , time