Name:                lucid-extras
Version:             0.1.0.0
Synopsis:            Generate more HTML with Lucid
Description:         Generate more HTML with Lucid - Bootstrap, Rdash and Email.
License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen <tanielsen@gmail.com>
Maintainer:          Tom Nielsen <tanielsen@gmail.com>
build-type:          Simple
Cabal-Version: 	     >= 1.10
homepage:            https://github.com/filopodia/open/lucid-extra
bug-reports:         https://github.com/filopodia/open/issues
category:            Web
Tested-With:         GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1
extra-source-files:
                   changelog.md

source-repository head
  type:     git
  location: https://github.com/filopodia/open

Library
   ghc-options:       -Wall
   hs-source-dirs:    lib
   default-language:  Haskell2010

   Exposed-modules:
                   Lucid.Bootstrap3
                 , Lucid.PreEscaped
                 , Lucid.Rdash
                 , Lucid.Mjml
                 , Lucid.Mjml.Attributes
                 , Lucid.Mjml.Component
                 , Lucid.Mjml.Container
                 , Lucid.Mjml.Column
                 , Lucid.Mjml.Divider
                 , Lucid.Mjml.Unit
                 , Lucid.Mjml.Section
                 , Lucid.Mjml.Skeleton
                 , Lucid.Mjml.Text
                 , Lucid.Mjml.Button
   Build-depends:
                 base                    >= 4.6 && < 5
               , lucid
               , text
               , blaze-builder
               , bytestring
               , mtl
               , mmorph >= 1.0
               , parsec >= 3.1
               , unordered-containers >= 0.2

Executable            site-gen
    ghc-options:      -Wall
    hs-source-dirs:   site-gen
    main-is:          Main.hs
    default-language:  Haskell2010
    other-modules:    DevelMain
                    , Lucid.Mjml.Samples.Postgres
    Build-Depends:    base                    >= 4.6 && < 5
                    , directory               >= 1.2
                    , lucid-extras
                    , lucid